removed unnecessary code.

--- a/client/src/app/pages/home/redeemed-items-view/redeemed-items-view.component.html
+++ b/client/src/app/pages/home/redeemed-items-view/redeemed-items-view.component.html
@@ -21,7 +21,7 @@
   <div class="container">
     <h3 style="margin-top: 10px;">Owner's Details</h3>
     <p>
-      <b class="title">Name:</b> {{item.owner.firstName}} {{ item.owner.lstName }}
+      <b class="title">Name:</b> {{item.owner.firstName}} {{ item.owner.lastName }}
     </p>
     <p>
       <b class="title">Email:</b> {{item.owner.email}}
