--- a/client/src/app/pages/home/redeemed-items-view/redeemed-items-view.component.html
+++ b/client/src/app/pages/home/redeemed-items-view/redeemed-items-view.component.html
@@ -15,7 +15,7 @@
       <b class="title">Description:</b> {{item.description}}
     </p>
     <p>
-      <b class="title">Date Added:</b> {{item.created}}
+      <b class="title">Date Added:</b> {{item.created | date}}
     </p>
   </div>
   <div class="container">
