--- a/client/src/app/shared/table/table.component.html
+++ b/client/src/app/shared/table/table.component.html
@@ -16,7 +16,7 @@
 
   <ng-container matColumnDef="created">
     <th mat-header-cell *matHeaderCellDef>Date Added</th>
-    <td mat-cell *matCellDef="let element"> {{element.created}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.created | date}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
